# mtEngine3

./: .gitignore  CMakeLists.txt
resources/config/: SBConfig.txt  keybindings.txt
resources/gui/: MainMenu.yml
resources/gui/lang/: en.yml
src/engine/gui/: gui.cpp  gui.h  renderer.cpp  uiElement.cpp  uiParser.cpp
src/engine/util/: configHandler.cpp
